<resources>
    <string name="app_name">AB Dial</string>
    <string name="action_settings">Settings</string>
    <string name="action_keyboard_title">Keyboard Toggle</string>
    <string name="action_check">(N)</string>
    <string name="action_tool_tip">Toggle to switch(Ctrl/Alt/Wn Keys) from click_each_time(Normal) state to key_pressed(Hold) state</string>
    <string name="action_disconnect">Disconnect</string>
    <string name="action_autopair">Enable AutoPair</string>
    <string name="auto_pair_flag">autopairfl</string>
    <string name="title_screen_on">Screen Always On</string>
    <string name="action_ble_status_tool_tip">App not connected via bluetooth</string>

    <string name="screen_on_flag">screenonfl</string>

    <string name="keyboard_state_0">⇩</string>
    <string name="keyboard_state_1">⌨</string>
    <string name="keyboard_state_2">(W)</string>
    <string name="keyboard_tip_0">Hidden keyboard</string>
    <string name="keyboard_tip_1">Your Android drive works like a bluetooth keyboard</string>
    <string name="keyboard_tip_2">You can edit text first，finally click the send button</string>

    <string name="keyboard_tip_hid">Send keycode directly</string>
    <string name="keyboard_tip_ansi">Send words with selected charset</string>
    <string name="keyboard_tip_unicode">Send words with Unicode encode</string>

    <string name="button_send">Send</string>
    <string name="button_release">Release</string>
    <string name="select_ansi_code">Select Charset</string>

    <string name="wheel_haptic_min">Time between twice wheel haptic</string>
    <string name="wheel_haptic_min_time">Setting the minimum time between twice wheel haptic(ms). setting=0，the wheel will not provide haptic</string>

    <string name="wheel_haptic_vib">wheel haptic time</string>
    <string name="wheel_haptic_vibrate_time">Set the mode of wheel haptic （provide by the operate system）</string>

    <string name="wheel_haptic_skip">wheel haptic skip count</string>
    <string name="wheel_haptic_skip_count">how many count could send once haptic event. 1count=0.2degree</string>

    <string name="haptic_use">haptic mode</string>
    <string name="haptic_use_system">Use system setting</string>
    <string name="haptic_use_mandatory">always</string>
    <string name="haptic_use_null">never</string>

    <string name="action_haptic_settings">Haptic Setting</string>
    <string name="action_show_edittext">Show EditText</string>

    <string name="string_setting">String Setting</string>
    <string name="sendkey_delay">Delay(ms)</string>
    <string name="sendkey_delay_tip">Sending keys too fast mightly make some error. Set delay and it will be fine. Default delay is 13ms</string>

    <string name="replace_newline">Replace Return</string>
    <string name="replace_newline_tip">In Unix,"return" is “\\n”；In Windows, "return" is “\\r\\n”；In Mac, "return" is “\\r”.\n
        Android is a Unix system，it is different from windows. If your PC is not Unix， and you also not turn “fast mode” ON，the “return” you inputed will be show as a space in your PC.
    </string>

    <string name="sendkey_fast">Fast Mode</string>
    <string name="sendkey_fast_tip">Send string without converting the numbers,English letters and some symbols on the standard keyboard, it could increasing the speed.
        If it is turned on, make sure that the input method is switched to English keyboard mode.</string>
    <string name="ansi_code">Encode</string>
    <string name="ansi_code_tip">AB Dial has three mode for send keyboard events, toggled HID/UI/ANSI icon at the top of the app.
        \nHID means that the keys on the keyboard are sent to the device in real time.
    \nUI means that the content is first entered into the text box, and then the app sends the string from the text box to the device in Unicode when you tap the send button.
    \nANSI means that the content is input into the text box first, and when you tap the send button, the app sends the string in the text box to the device with the code you choose.
        \nIf the wrong encoding is selected, sending the string will form a garbled code. On Windows, less old software generally supports Unicode encoding.
        If entering Unicode fails, you can select the character and dot the icon to ANSI.
    </string>
    <string name="wheel_color">Wheel Color</string>
    <string name="wheel_color_tip">Windows radial controller devices have a primary button, and a rotational affordance.AB Dial use a wheel split the screen to two part：
    Click the area inside the wheel as click primary button， Move the area outside the wheel as rotation.
        When you turn the wheel color on, each operation could change the color of the wheel.</string>

    <string name="ui_setting">UI Setting</string>
    <string name="mult_line_text">m
        \nu
        \nl
        \nt
        \n
        \nl
        \ni
        \nn
        \ne
        \n
        \ntext</string>
</resources>
