<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <!-- "Mark Favorite", should appear as action button if possible -->

<!--
    <item
            android:id="@+id/check_dial"
            android:title="x"

            android:tooltipText="click"
            android:showAsAction="always"
            />
-->
    <item
            android:id="@+id/keyboard_state"
            android:icon="@drawable/ic_icon_hid"
            android:title=""
            android:tooltipText="@string/keyboard_tip_hid"
            android:showAsAction="always"
            />


    <item
            android:id="@+id/check_modifier_state"
            android:title="@string/action_check"
            android:tooltipText="@string/action_tool_tip"
            android:showAsAction="always"
    />

    <item
            android:id="@+id/ble_app_connection_status"
            android:title="@string/action_ble_status_tool_tip"
            android:icon="@drawable/ic_action_app_not_connected"
            android:tooltipText="@string/action_ble_status_tool_tip"
            android:showAsAction="always"


    />

    <item
            android:id="@+id/action_keyboard"
            android:icon="@drawable/ic_action_keyboard"
            android:title="@string/action_keyboard_title"
            android:showAsAction="always"
           />



    <!-- Settings, should always be in the overflow -->

    <item android:id="@+id/action_haptic_settings"
            android:title="@string/action_haptic_settings"
            android:showAsAction="never"
            />

    <item android:id="@+id/action_disconnect"
          android:title="@string/action_disconnect"
          android:showAsAction="never"

    />
    <item android:id="@+id/action_autopair"
          android:title="@string/action_autopair"
          android:checkable="true"
          android:showAsAction="never"
    />

    <item android:id="@+id/action_screen_on"
          android:title="@string/title_screen_on"
          android:checkable="true"
          android:showAsAction="never"
    />

    <item android:id="@+id/action_show_edittext"
            android:title="@string/action_show_edittext"
            android:checkable="true"
            android:showAsAction="never"
            />

    <item android:id="@+id/action_select_ansi_code"
            android:title="@string/select_ansi_code"
            android:showAsAction="never"
            />
<!--
    <item android:id="@+id/action_wheel_haptic"
            android:title="@string/wheel_haptic_min"
            android:showAsAction="never"
            />
-->

</menu>